--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "multer": "^2.0.1",
-    "next": "^13.5.11",
+    "next": "^15.3.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
-    "postcss": "8.4.30",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
